# Agent-Memory-Vault

./: .gitignore  Agent Build Specification.txt  Agent_Build_Specification.txt  CLAUDE.md  Cargo.toml  HANDOFF.md  HANDOFF_V0.1_ARCHIVE.md  HANDOFF_V0.2_PART1_ARCHIVE.md  HANDOFF_V0.2_PART2_ARCHIVE.md  HANDOFF_V0.2_PART3_ARCHIVE.md  Memory Vault Tests.md  README.md  T0.1.6_PLAN.md  T0.1.6_PLAN_PHASE_C.md  T0.1.7_PLAN.md  T0.1.8_PLAN.md  T0.1.9_MODEL_SPIKE.md  T0.1.9_PLAN.md  rust-toolchain.toml
crates/vault-app/: Cargo.toml
crates/vault-app/examples/: keychain_spike.rs
crates/vault-app/src/: adapter.rs  application.rs  config.rs  consolidator_lock.rs  keychain.rs  lib.rs  normalization.rs  process_exit.rs  signal_source.rs
crates/vault-app/tests/: concurrent_multiagent_stage_b.rs  content_ceiling.rs  graph_readpath_dogfood.rs  integration_smoke.rs  read_no_keyword_overlap.rs  read_quality_eval.rs  scale_eval.rs  search_recall_first.rs
crates/vault-app/tests/fixtures/: scale_eval.json
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: main.rs
crates/vault-connectors/: Cargo.toml
crates/vault-connectors/src/: lib.rs
crates/vault-consolidator/: Cargo.toml
crates/vault-consolidator/src/: checkpoint.rs  consolidator.rs  lib.rs  report.rs  scheduler.rs  summary.rs  topics.rs
crates/vault-consolidator/src/phases/: archive.rs  candidates.rs  cluster.rs  contradiction.rs  decay.rs  dedup.rs  enrich.rs  extract.rs  merge.rs  mod.rs
crates/vault-consolidator/tests/: acceptance.rs  archive_integration.rs  contradiction_resolution.rs  decay_integration.rs  dedup_integration.rs  dedup_threshold_calibration.rs  incremental_consolidation.rs  merge_acceptance.rs  merge_resilience.rs  nn_contradiction_spike.rs  properties.rs  report_generation.rs
crates/vault-consolidator/tests/common/: mod.rs
crates/vault-consolidator/tests/fixtures/: canned_merge_decisions_nary.json  clustering_acceptance_100.json  merge_acceptance_100.json
crates/vault-core/: Cargo.toml
crates/vault-core/src/: boundary.rs  entity.rs  error.rs  lib.rs  memory.rs
crates/vault-embedding/: .gitignore  Cargo.toml  MODEL_PROVENANCE.md
crates/vault-embedding/src/: bge_small.rs  integrity.rs  lib.rs  ort_init.rs  provider.rs  reranker.rs  reranker_lazy.rs  testing.rs
crates/vault-embedding/tests/: embedding_tests.rs  reranker_fun_diagnostic.rs  reranker_spike.rs
crates/vault-llm/: Cargo.toml
crates/vault-llm/examples/: phi4_load_and_json_spike.rs
crates/vault-llm/src/: error.rs  lib.rs  model_loader.rs  phi4_mini.rs  provider.rs  qwen25.rs
crates/vault-llm/tests/: fixture_smoke.rs  phi4_mini_smoke.rs
crates/vault-llm/tests/fixtures/: canned_merge_decisions.json
crates/vault-mcp/: Cargo.toml
crates/vault-mcp/examples/: macro_spike.rs
crates/vault-mcp/src/: adapter.rs  audit.rs  daemon.rs  lib.rs  server.rs
crates/vault-mcp/tests/: adversarial.rs  as_of_write.rs  daemon_auth.rs  error_mapping.rs  initialize_smoke.rs  streamable_http_spike.rs  tool_invoke.rs  trust_boundary.rs
crates/vault-mcp/tests/common/: mock_adapter.rs  mod.rs
crates/vault-retrieval/: Cargo.toml
crates/vault-retrieval/examples/: t023_retrieval_diagnostic_results.md  t023_retrieval_diagnostic_spike.rs  t024_readtime_viability_spike.rs  t025_qwen_vs_split_results.md  t025_qwen_vs_split_spike.rs  t026_qwen_7b_results.md  t026_qwen_7b_spike.rs  t027_research_latency_backup.md  t027a_ext_t14_t16_results.md  t027a_ext_t14_t16_spike.rs  t027a_qwen_tuning_results.md  t027a_qwen_tuning_spike.rs  t027b_qwen_7b_vulkan_results.md  t027b_qwen_7b_vulkan_spike.rs  t028b_hnsw_vs_ivf_results.md  t028b_hnsw_vs_ivf_spike.rs  t028c_diverse_corpus_diagnostic.rs  t028c_diverse_corpus_results.md  t028d_prompt_iteration_spike.rs  t028e_llm_determinism_probe.rs  t028f_q21_q26_probe.rs  t028g_hybrid_retrieval_spike.rs  t029_scale_1000_retrieval_diagnostic.rs  t030_q25_byte_equality_probe.rs  t031_v10_prompt_smoke.rs
crates/vault-retrieval/src/: lib.rs  read_pipeline.rs  report_io.rs  reranked_retriever.rs  retriever.rs  search_hint.rs  structured_read_pipeline.rs
crates/vault-retrieval/src/strategies/: abstain.rs  graph.rs  hybrid.rs  keyword.rs  mod.rs  semantic.rs
crates/vault-retrieval/test-fixtures/: merge_acceptance_100_queries.json
crates/vault-retrieval/tests/: abstain_channel_diagnostic.rs  abstain_q21_focused.rs  abstain_tests.rs  full_stack_smoke.rs  hybrid_tests.rs  keyword_tests.rs  read_pipeline_acceptance.rs  read_pipeline_scale_acceptance.rs  retrieval_tests.rs  trait_invariants.proptest-regressions  trait_invariants.rs
crates/vault-retrieval/tests/common/: mod.rs
crates/vault-retrieval/tests/fixtures/: read_quality_eval.json
crates/vault-storage/: Cargo.toml  build.rs
crates/vault-storage/examples/: at_rest_spike.rs  at_rest_spike.rs.v1_fail_disabled  lance_corruption_spike.rs  sqlcipher_rekey_spike.rs  t028a_lance_index_encryption_spike.rs  v0_1_lance_compat_spike.rs  v0_1_raw_parquet_read_spike.rs
crates/vault-storage/proptest-regressions/: metadata_store.txt
crates/vault-storage/src/: agent_token_store.rs  audit.rs  cascading.rs  checkpoint.rs  consolidation_state.rs  dead_letter.rs  divergence.rs  fault_injection.rs  graph_store.rs  key.rs  lib.rs  metadata_store.rs  migration.rs  pending_sync.rs  retry_queue.rs  retry_worker.rs  sealed_object_store.rs  vector_store.rs
crates/vault-storage/src/migrations/: 0001_initial.sql  0002_cascade_infra.sql  0003_pending_sync_payload.sql  0004_consolidation_checkpoints.sql  0005_consolidation_watermark.sql  0006_memory_archived_at.sql  0007_agent_tokens.sql  mod.rs
crates/vault-storage/src/migrations_graph/: 0001_initial.sql  mod.rs  (+1 more)
crates/vault-storage/tests/: migration_v0_1_to_sealed.rs  t0_2_0_acceptance.rs
crates/vault-sync/: Cargo.toml
crates/vault-sync/examples/: dryoc_spike.rs
crates/vault-sync/src/: lib.rs
crates/vault-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/vault-tauri/capabilities/: default.json
crates/vault-tauri/permissions/: default.toml
crates/vault-tauri/src/: commands.rs  lib.rs  main.rs
(+28 files in other folders)
