[workspace]
resolver = "2"
members = [
    "crates/vault-core",
    "crates/vault-storage",
    "crates/vault-cli",
    "crates/vault-embedding",
    "crates/vault-llm",
    "crates/vault-retrieval",
    "crates/vault-consolidator",
    "crates/vault-mcp",
    "crates/vault-sync",
    "crates/vault-connectors",
    "crates/vault-app",
    "crates/vault-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "Proprietary"
authors = ["Shahbaz Malik"]
repository = "https://github.com/shahbaz242630/Agent-Memory-Vault"

# All dependencies pinned per BRD §2.9 / §4. Crates inherit via { workspace = true }.
# Workspace.dependencies declarations are lazy — only fetched when a member crate
# actually depends on them.
#
# T0.1.5b — every dep that has a workspace member consuming it is pinned to
# its exact resolved version from Cargo.lock (`"=X.Y.Z"`). Deps below that
# show as `"X.Y"` (caret) are NOT yet consumed by any workspace member, so
# Cargo.lock has no resolved entry for them — they'll be exact-pinned at
# the task that first wires them into a member crate (per the docs.rs +
# version-verification step established by ADR-006 / ADR-011). The lazy
# workspace.dependencies semantics means caret-pinned-but-unused entries
# cannot drift in the lockfile until first use, so this is safe.
[workspace.dependencies]
# Async runtime (BRD §4.1)
tokio = { version = "=1.52.1", features = ["full"] }
async-trait = "=0.1.89"
# Futures combinators (TryStreamExt for draining lancedb's SendableRecordBatchStream
# into Vec<RecordBatch>). Added in T0.1.4 Phase 3.
futures = "=0.3.32"

# Error handling (BRD §4.1)
thiserror = "=2.0.18"
anyhow = "=1.0.102"

# Serialization (BRD §4.1)
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

# Logging (BRD §4.1)
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }

# Time (BRD §4.1). T0.2.0 Phase 0a (2026-05-XX): bumped from =0.4.39 →
# =0.4.44 because lancedb 0.27.2 pulls arrow-array 57.2.0 which requires
# chrono ^0.4.40. The original ADR-013 lock to 0.4.39 was to avoid arrow
# 52.x's ChronoDateExt::quarter() conflict — that conflict no longer
# applies because arrow 57.x reworked the trait. ADR-013 superseded by
# ADR-037 (lancedb upgrade record). schemars 1.0's ^0.4.39 lower bound
# is still satisfied.
chrono = { version = "=0.4.44", features = ["serde"] }

# UUIDs (BRD §4.1)
uuid = { version = "=1.23.1", features = ["v4", "v7", "serde"] }

# Storage (BRD §4.2)
# T0.2.0 Phase 0a (2026-05-XX): bumped from =0.8.0 → =0.27.2 to gain
# lance-io 4.x's ObjectStoreProvider/Registry API needed for at-rest
# encryption integration. ADR-037 records the upgrade scope. Direct
# pins for lance/object_store/bytes/url removed — Phase 0c re-adds
# them at lancedb 0.27's transitive versions for the rewritten spike.
lancedb = "=0.27.2"
# arrow bumped 52.2.0 → 57.2.0 to match lancedb 0.27.2's transitive.
# Phase 0a (2026-05-XX) confirmed arrow 57.x reworked ChronoDateExt
# (no more quarter() conflict with chrono 0.4.44).
arrow-array = "=57.2.0"
arrow-schema = "=57.2.0"
# T0.2.0 Phase 0d (2026-05-08): at-rest sealed-storage path consumes lance-io's
# ObjectStoreProvider trait + lance-core's Error/Result, plus object_store's
# DynObjectStore + LocalFileSystem + path::Path types, plus dryoc/bytes/url for
# AEAD framing + URL handling. Versions match lancedb 0.27.2's transitive
# resolution (verified 2026-05-08 via cargo tree -p lancedb). Promoted from
# vault-storage spike-local dev-deps — production code now consumes them.
lance-io = "=4.0.0"
lance-core = "=4.0.0"
object_store = "=0.12.5"
bytes = "=1.11.1"
url = "=2.5.8"
duckdb = { version = "=1.2.2", features = ["bundled"] }
# rusqlite uses bundled-sqlcipher-vendored-openssl instead of bundled-sqlcipher
# (deviation from BRD §4.2 — see HANDOFF.md ADR-006). Vendoring OpenSSL avoids
# requiring a system OpenSSL install on Windows/Mac/Linux dev machines.
rusqlite = { version = "=0.32.1", features = ["bundled-sqlcipher-vendored-openssl", "chrono", "serde_json"] }

# ML (BRD §4.3) — exact-pinned at T0.1.7 (vault-embedding) per BRD §2.9 / T0.1.5b
# discipline. ort 2.0 is still in release candidate (rc.12 is the latest as of
# 2026-04-30) — RC versions don't match caret pins, so we MUST be explicit.
# load-dynamic feature: dylib loaded at runtime via ort::init_from(path), not
# at link time (Spike 1 finding — see T0.1.7_PLAN.md amendment block).
# llama-cpp-2: still caret-pinned; verify exact crate name + version at start
# of vault-llm task (T0.2.1) per BRD §4.3 note.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
# tokenizers — default features (`progressbar`, `onig`, `esaxx_fast`) trimmed
# at SPIKE-22 / ADR-022 (T0.1.8 Phase 1). `esaxx_fast` was the load-bearing
# blocker: it pulls `esaxx-rs`, a C++ crate compiled with /MT (static CRT),
# which conflicts with `duckdb-sys`'s /MD (dynamic CRT) at MSVC link time.
# Our usage in BgeSmallProvider is pure inference — `Tokenizer::from_file`
# + `.encode()` + `Encoding::{truncate,get_*}` — and only `onig` is
# load-bearing for compile (tokenizers 0.20 has a non-gated
# `use onig::Regex` in `utils/onig.rs`; the feature CANNOT be dropped
# without forking the crate). `esaxx_fast` (Unigram training) and
# `progressbar` (training UI) are not needed for inference — both dropped.
# Tech-debt: re-verify the feature-trim survives any tokenizers upgrade
# (HANDOFF.md monthly check, alongside OpenSSL / protobuf / chrono / ort).
tokenizers = { version = "=0.20.4", default-features = false, features = ["onig"] }
# llama-cpp-2: Rust binding to llama.cpp for local LLM inference (T0.2.1 vault-llm).
# Exact-pinned at T0.2.1 Phase 1 spike-2 (2026-05-13). Crate name + version verified
# per BRD §4.3 placeholder discharge. Latest stable on crates.io as of spike date.
# Exposes `LlamaSampler` + `json_schema_to_grammar()` for GBNF-constrained JSON
# output — directly serves T0.2.3 consolidator merge-decision workload. Underlying
# `llama-cpp-sys-2` is unsafe C++ FFI; walled off behind this safe wrapper.
# `#![forbid(unsafe_code)]` cleanly applies in vault-llm crate per BRD §2.7.
# Maintained by Marcus Dunn at utilityai/llama-cpp-rs (active as of 2026-04-30).
llama-cpp-2 = "=0.1.146"

# Sync (BRD §4.4) — yrs caret-pinned; exact-pin at T0.2.x (sync-engine first use).
# dryoc consumed today as dev-dependency in vault-sync (dryoc spike); reqwest will
# be exact-pinned-on-first-use too — declared but not yet consumed.
yrs = "0.21"
dryoc = "=0.7.2"
reqwest = { version = "=0.12.28", features = ["json", "rustls-tls", "stream"] }

# MCP (BRD §4.5) — exact-pinned at T0.1.9 (vault-mcp first use) per BRD §2.9 /
# T0.1.5b discipline. rmcp 1.5.0 was released 2026-04-16, one day after the
# OX Security April 15 stdio RCE class disclosure. ADR-026 documents the
# host-vs-server scope analysis: vault-mcp is a stdio SERVER (spawned, not
# spawner) — structurally not in the threat surface — so this pin is for
# server-side surface only. When future tasks introduce MCP-host
# functionality (T0.1.11 vault-tauri or successor), the threat surface
# revisits per ADR-026 forward pointer. Features (server / transport-io /
# macros / etc.) declared per-crate in `vault-mcp/Cargo.toml` so the set
# stays scoped to actual usage.
rmcp = "=1.5.0"

# CLI (T0.1.6 Phase C1b — vault-cli operator binary). Exact-pinned per
# BRD §2.9 from Cargo.lock at first build. The two deps are tightly
# scoped: `clap` parses subcommands, `rpassword` reads the SQLCipher
# passphrase without echo. No env-var auth path (per Phase C plan
# smaller-item-(a)).
clap = { version = "=4.6.1", features = ["derive"] }
rpassword = "=7.5.1"

# Tauri (BRD §4.6) — exact-pinned at T0.1.11 Phase 3 (vault-tauri lib→bin conversion).
# Spike 1 (web-research methodology, T0.1.11 plan-paragraph v4): tauri 2.11.0 released
# 2026-04-30, no 2.12.x line yet, monthly bump-cadence wired in monthly-tech-debt.yml.
# tauri-build 2.6.0 is required by tauri 2.11.0 (^2.6.0 dep constraint). tauri-plugin-dialog 2.5.0
# (verified 2026-05-05) wires ADR-020 fatal-error-dialog at vault-tauri main.rs setup
# hook. Dialog API moved out of tauri core in v2 — must use plugin per Spike 1 finding.
tauri = { version = "=2.11.0", features = [] }
tauri-build = "=2.6.0"
tauri-plugin-dialog = "=2.5.0"

# Security primitives (BRD §11.5.3)
zeroize = { version = "=1.8.2", features = ["derive"] }

# OS keychain (T0.2.0 Phase 1, ADR-040 + ADR-040 amendment).
# `keyring-core` is the library crate (the previous `keyring` crate at v4
# is sample-code-only; do-not-depend-on warning landed April 2026).
# Per-platform stores are separate crates per the open-source-cooperative
# org's coordinated April 2026 v1.0.0 release. Phase 1 lands Windows only;
# macOS / Linux per-platform crates added at T0.2.0.x sub-task or T0.2.14
# Stub-Installer-adjacent per HANDOFF.md OQ #1 partial resolution.
# Promoted from vault-app spike-local dev-deps at Phase 1 close.
keyring-core = "=1.0.0"
# `windows-native-keyring-store` consumed only on Windows (cfg-gated in
# vault-app); this workspace declaration is fine on all platforms because
# Cargo's lazy [workspace.dependencies] semantics mean it's only resolved
# when a member crate consumes it via { workspace = true }.
windows-native-keyring-store = "=1.0.0"

# Random + hex — used by the keychain helper (random master_key bytes on
# first run; hex-encoding the BLAKE3-derived SqlCipher subkey to a String
# passphrase per ADR-040 amendment derivation tree). Both are widely-used
# small crates already in the resolved transitive tree pre-Phase-1.
getrandom = "=0.2.17"
hex = "=0.4.3"

# Hashing (BRD §11.9.2 audit log tamper-evident chain — added in T0.1.3, ADR-006)
blake3 = "=1.8.5"
# sha2 (T0.1.7 vault-embedding model + tokenizer integrity per ADR-020).
# Exact-pinned per BRD §2.9 / T0.1.5b discipline. Note: there is also a
# sha2 0.11.0 transitive (via tokenizers) — duplication accepted; tokenizers
# pulls 0.11 internally, we pin 0.10.x for our own use to match the rest of
# the workspace's Digest-trait expectations.
sha2 = "=0.10.9"

# Test deps (BRD §4.7)
proptest = "=1.11.0"
tokio-test = "=0.4.5"
# mockall — caret pin; exact-pin when first wired into a crate's [dev-dependencies].
mockall = "0.13"
tempfile = "=3.27.0"
# tracing-test (T0.1.8 Phase 3) — captures `tracing` events emitted during a
# `#[traced_test]`-annotated test so we can assert specific log lines fire.
# Used in vault-retrieval to verify the cross-crate `warn!` from
# vault-storage's `MetadataStore::get_memories_batch` orphan-id branch
# actually emits when the orphan-row test path runs. Exact-pinned per
# BRD §2.9 / T0.1.5b at first use.
#
# `no-env-filter` feature: the default macro-installed env filter is
# `{calling_crate}=trace`, which drops events from any other crate
# before they reach the capture buffer. Phase 3 needs to capture
# vault_storage events from a vault_retrieval test, so we widen the
# filter to `trace` (capture everything) via this feature flag.
tracing-test = { version = "=0.2.6", features = ["no-env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
